# python-patreon-v2

./: pyproject.toml
patreon_v2/: typedefs.py
