[tool.poetry]
name = "python-patreon-v2"
version = "0.1.0"
description = ""
authors = ["C. Eric Mathey <emathey@protonmail.com>"]
readme = "README.md"
packages = [{include = "patreon_v2"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
